argocd-appsets/k3s-cluster1/httproute_nginx.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: nginx
spec:
  hostnames: 
  - nginx.one.io
  parentRefs:
    - name: cilium-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
      - kind: Service
        name: nginx
        port: 80
